NEXT RELEASE
 Classes:
 - Renamed o.Constructor to o.Class, because that is what it is and it is
   less to type.
 Traits:
 - Added requires attribute to o.Trait so that traits can declare a
   base-line interface that they require to be installed onto an
   object.
 Types:
 - Added o.simpleObjectType for checking if an object's constructor is Object.
 - Added o.typeType, o.attributeType, o.traitType, and o.classType for validating
   and coercing o.js's built-in object types.  Each of which supports a coercion
   from the simpleObject type.
 - ArrayOfType and ObjectOfType now apply their inner type's coercions.
 - Greatly simplify the trait type.
 - InstanceOfType declares a simpleObject to instance coercion if the
   instance constructor was created with o.Class.
 - Added o.positiveIntType due to this type being a common case.
 Plumbing:
 - Exposed o.ucFirst to the public.

0.0.8 : 2014-01-03
 - In addition to accepting an Array, o.DuckType now accepts an Object,
   allowing for type checking.
 - Added o.PatternType for creating types that match against a RegExp.
 - Added bower.json so that Bower has some more info about this package.
 - Attribute/Trait.install() now supports a second argument for specifying
   the value of the attribute(s).
 - The attributes attribute of Trait is now an object instead of an array.
 - Added o.local() to localize object property changes to a scope.
 - Attribute properties reader, writer, predicate, and clearer now take
   false instead of null.
 - An attribute's writer property now defaults to false to support the best
   practice of immutable objects.
 - Avoid a race condition when filters depend on other attributes being
   set during object construction.
 - Added a builder argument to o.writer and o.Attribute which provides a
   method-based alternative to devoid.
 - Constructors now get a trait applied to them that exposes a type and
   trait attribute.
 - Traits now have a type attribute which returns a Duck type that can be